[package]
name = "gps-path-average-distance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["cargo", "derive"] }
colored = "2.0.0"
geo = "0.25.0"
gpx = "0.9.1"
