[package]
name = "gps-path-average-distance"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
colored = "2.1.0"
geo = "0.28.0"
gpx = "0.10.0"
flat_projection = "0.4.0"
serde_json = "1.0.128"